--- a/notebooks/Candidate_Model_Genesis.ipynb
+++ b/notebooks/Candidate_Model_Genesis.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 21,
       "metadata": {
         "id": "TvwryFt5GAZc"
       },
@@ -49,20 +49,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "feEoNQejIwql",
-        "outputId": "10f07914-63eb-431d-db1e-e7eb74332e03"
+        "outputId": "db419a4d-3e60-41dd-fd91-ef93f6ba5833"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive/\n"
+            "Drive already mounted at /content/drive/; to attempt to forcibly remount, call drive.mount(\"/content/drive/\", force_remount=True).\n"
           ]
         }
       ],
@@ -72,7 +72,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 23,
       "metadata": {
         "id": "wbkrbaoCIkS6"
       },
@@ -83,28 +83,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 24,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "dgVyLhgEpHC2",
-        "outputId": "2137c871-0045-4c96-fef5-0c0504428548"
+        "id": "dgVyLhgEpHC2"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-4-6de22f19c6fc>:6: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  X_afetam_eficacia[['tempo_seguimento']] = StandardScaler().fit_transform(X_afetam_eficacia[['tempo_seguimento']])\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from sklearn.preprocessing import StandardScaler\n",
         "\n",
@@ -116,7 +99,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "kx0xfNKmL7Hh"
       },
@@ -130,24 +113,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "CAoiQIkZ5hFx",
-        "outputId": "f437bcb0-c226-4eae-963b-f61b28f38a9c"
+        "id": "CAoiQIkZ5hFx"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0\n",
-            "38\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "print(len(df.query(\"idade_diagnostico > 80 and ultima_informacao_paciente == 3 and eficacia_tratamento == 0\")))\n",
         "print(len(df.query(\"idade_diagnostico > 80 and ultima_informacao_paciente == 3 and eficacia_tratamento == 1\")))\n",
@@ -161,24 +131,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "hOoCCNVm7xWy",
-        "outputId": "9eebcf1a-ee33-4733-dc51-f4bc493474da"
+        "id": "hOoCCNVm7xWy"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "12\n",
-            "0\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "df.query(\"idade_diagnostico < 30 and ultima_informacao_paciente == 0 and eficacia_tratamento == 1\")\n",
         "\n",
@@ -192,7 +149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "HH9ptuetMeYo"
       },
@@ -203,7 +160,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "OSHRFU1Y0MKU"
       },
@@ -217,7 +174,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "w1KOsrCI-amh"
       },
@@ -233,41 +190,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "H3FcKLf2AcgZ",
-        "outputId": "1f9c74c5-0288-4a6c-d436-317969d2c335"
+        "id": "H3FcKLf2AcgZ"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Collecting lazypredict\n",
-            "  Downloading lazypredict-0.2.12-py2.py3-none-any.whl (12 kB)\n",
-            "Requirement already satisfied: tqdm in /usr/local/lib/python3.9/dist-packages (from lazypredict) (4.65.0)\n",
-            "Requirement already satisfied: click in /usr/local/lib/python3.9/dist-packages (from lazypredict) (8.1.3)\n",
-            "Requirement already satisfied: lightgbm in /usr/local/lib/python3.9/dist-packages (from lazypredict) (3.3.5)\n",
-            "Requirement already satisfied: xgboost in /usr/local/lib/python3.9/dist-packages (from lazypredict) (1.7.4)\n",
-            "Requirement already satisfied: joblib in /usr/local/lib/python3.9/dist-packages (from lazypredict) (1.1.1)\n",
-            "Requirement already satisfied: pandas in /usr/local/lib/python3.9/dist-packages (from lazypredict) (1.4.4)\n",
-            "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.9/dist-packages (from lazypredict) (1.2.2)\n",
-            "Requirement already satisfied: scipy in /usr/local/lib/python3.9/dist-packages (from lightgbm->lazypredict) (1.10.1)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.9/dist-packages (from lightgbm->lazypredict) (1.22.4)\n",
-            "Requirement already satisfied: wheel in /usr/local/lib/python3.9/dist-packages (from lightgbm->lazypredict) (0.40.0)\n",
-            "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.9/dist-packages (from scikit-learn->lazypredict) (3.1.0)\n",
-            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.9/dist-packages (from pandas->lazypredict) (2022.7.1)\n",
-            "Requirement already satisfied: python-dateutil>=2.8.1 in /usr/local/lib/python3.9/dist-packages (from pandas->lazypredict) (2.8.2)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.9/dist-packages (from python-dateutil>=2.8.1->pandas->lazypredict) (1.16.0)\n",
-            "Installing collected packages: lazypredict\n",
-            "Successfully installed lazypredict-0.2.12\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!pip install lazypredict"
       ]
@@ -276,21 +203,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "7Q0IcJ6eALuK",
-        "outputId": "7d0c7fcc-19bd-469a-8108-e15fa58fc443"
+        "id": "7Q0IcJ6eALuK"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "  7%|▋         | 2/29 [00:00<00:10,  2.67it/s]"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from lazypredict.Supervised import LazyClassifier\n",
         "\n",
@@ -412,9 +327,9 @@
         "model = AdaBoostClassifier()\n",
         "\n",
         "params = {\n",
-        "          'estimator':[None, DecisionTreeClassifier(max_depth=1), DecisionTreeClassifier(max_depth=2)],\n",
-        "          'n_estimators': [50, 150, 100, 200, 300, 400, 500],\n",
-        "          'learning_rate': [0.01, 0.1, 0.5, 1.0, 2.0, 5.0],\n",
+        "          'estimator':[None, DecisionTreeClassifier(max_depth=1)],\n",
+        "          'n_estimators': [50, 100, 150],\n",
+        "          'learning_rate': [0.01, 0.1],\n",
         "          'algorithm': ['SAMME', 'SAMME.R'],\n",
         "           'random_state': [73]\n",
         "          }\n",
@@ -434,6 +349,34 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import confusion_matrix, accuracy_score, balanced_accuracy_score, roc_auc_score, f1_score\n",
+        "\n",
+        "y_pred = grid_searchAda.predict(X_test)\n",
+        "\n",
+        "accuracy = accuracy_score(y_test, y_pred)\n",
+        "balanced_accuracy = balanced_accuracy_score(y_test, y_pred)\n",
+        "roc_auc = roc_auc_score(y_test, y_pred, multi_class='ovr')\n",
+        "f1 = f1_score(y_test, y_pred, average='weighted')\n",
+        "\n",
+        "print(\"Accuracy:\", accuracy)\n",
+        "print(\"Balanced Accuracy:\", balanced_accuracy)\n",
+        "print(\"ROC AUC:\", roc_auc)\n",
+        "print(\"F1 Score:\", f1)\n",
+        "\n",
+        "# Accuracy: 0.6695371367061357\n",
+        "# Balanced Accuracy: 0.6643541806393919\n",
+        "# ROC AUC: 0.6643541806393919\n",
+        "# F1 Score: 0.6674917955557508"
+      ],
+      "metadata": {
+        "id": "abH-7TE3fXb0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "C4XF3daPmEvr"
@@ -446,9 +389,9 @@
         "model = RandomForestClassifier()\n",
         "\n",
         "params = {\n",
-        "          'n_estimators': [50, 150, 100, 200, 300, 400, 500],\n",
-        "          'max_depth': [5,10,15,20,25],\n",
-        "          'max_features':['sqrt','log2',None],\n",
+        "          'n_estimators': [50, 100, 150],\n",
+        "          'max_depth': [5,10,15],\n",
+        "          'max_features':['sqrt','log2', None],\n",
         "          'random_state': [73]\n",
         "          }\n",
         "\n",
@@ -467,6 +410,29 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import confusion_matrix, accuracy_score, balanced_accuracy_score, roc_auc_score, f1_score\n",
+        "\n",
+        "y_pred = grid_searchRF.predict(X_test)\n",
+        "\n",
+        "accuracy = accuracy_score(y_test, y_pred)\n",
+        "balanced_accuracy = balanced_accuracy_score(y_test, y_pred)\n",
+        "roc_auc = roc_auc_score(y_test, y_pred, multi_class='ovr')\n",
+        "f1 = f1_score(y_test, y_pred, average='weighted')\n",
+        "\n",
+        "print(\"Accuracy:\", accuracy)\n",
+        "print(\"Balanced Accuracy:\", balanced_accuracy)\n",
+        "print(\"ROC AUC:\", roc_auc)\n",
+        "print(\"F1 Score:\", f1)\n"
+      ],
+      "metadata": {
+        "id": "YYw_D-c3wKIW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "PBJKlkDMmGka"
@@ -479,9 +445,9 @@
         "model = LGBMClassifier()\n",
         "\n",
         "params = {\n",
-        "    'max_depth': [5, 10, 15],\n",
-        "    'learning_rate': [0.01, 0.05, 0.1],\n",
-        "    'n_estimators': [50, 100, 150],\n",
+        "    'max_depth': [5, 10],\n",
+        "    'learning_rate': [0.01, 0.05],\n",
+        "    'n_estimators': [50, 100],\n",
         "    'random_state': [73]\n",
         "}\n",
         "\n",
@@ -497,6 +463,29 @@
         "# 0.6842125988442014\n",
         "# 0.6727664155005382"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import confusion_matrix, accuracy_score, balanced_accuracy_score, roc_auc_score, f1_score\n",
+        "\n",
+        "y_pred = grid_searchLGBM.predict(X_test)\n",
+        "\n",
+        "accuracy = accuracy_score(y_test, y_pred)\n",
+        "balanced_accuracy = balanced_accuracy_score(y_test, y_pred)\n",
+        "roc_auc = roc_auc_score(y_test, y_pred, multi_class='ovr')\n",
+        "f1 = f1_score(y_test, y_pred, average='weighted')\n",
+        "\n",
+        "print(\"Accuracy:\", accuracy)\n",
+        "print(\"Balanced Accuracy:\", balanced_accuracy)\n",
+        "print(\"ROC AUC:\", roc_auc)\n",
+        "print(\"F1 Score:\", f1)\n"
+      ],
+      "metadata": {
+        "id": "hDWRG2-RwOkb"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -522,11 +511,11 @@
         "model = AdaBoostClassifier()\n",
         "\n",
         "params = {\n",
-        "          'estimator':[None, DecisionTreeClassifier(max_depth=1), DecisionTreeClassifier(max_depth=2)],\n",
-        "          'n_estimators': [50, 150, 100, 200, 300, 400, 500],\n",
-        "          'learning_rate': [0.01, 0.1, 0.5, 1.0, 2.0, 5.0],\n",
+        "          'estimator':[None, DecisionTreeClassifier(max_depth=1)],\n",
+        "          'n_estimators': [50, 100, 150],\n",
+        "          'learning_rate': [0.01, 0.1],\n",
         "          'algorithm': ['SAMME', 'SAMME.R'],\n",
-        "          'random_state': [73]\n",
+        "           'random_state': [73]\n",
         "          }\n",
         "\n",
         "randomizedSearchAda = RandomizedSearchCV(estimator=model, param_distributions=params, cv=5, n_iter=50)\n",
@@ -544,6 +533,30 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import confusion_matrix, accuracy_score, balanced_accuracy_score, roc_auc_score, f1_score\n",
+        "\n",
+        "y_pred = randomizedSearchAda.predict(X_test)\n",
+        "\n",
+        "accuracy = accuracy_score(y_test, y_pred)\n",
+        "balanced_accuracy = balanced_accuracy_score(y_test, y_pred)\n",
+        "roc_auc = roc_auc_score(y_test, y_pred, multi_class='ovr')\n",
+        "f1 = f1_score(y_test, y_pred, average='weighted')\n",
+        "\n",
+        "# imprimindo as métricas\n",
+        "print(\"Accuracy:\", accuracy)\n",
+        "print(\"Balanced Accuracy:\", balanced_accuracy)\n",
+        "print(\"ROC AUC:\", roc_auc)\n",
+        "print(\"F1 Score:\", f1)"
+      ],
+      "metadata": {
+        "id": "SRKhV_6NwPTd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "tfEMoFBj3i61"
@@ -556,9 +569,9 @@
         "rf = RandomForestClassifier()\n",
         "\n",
         "random_grid = {\n",
-        "          'n_estimators': [50, 150, 100, 200, 300, 400, 500],\n",
-        "          'max_depth': [5,10,15,20,25],\n",
-        "          'max_features':['sqrt','log2',None],\n",
+        "          'n_estimators': [50, 100, 150],\n",
+        "          'max_depth': [5,10,15],\n",
+        "          'max_features':['sqrt','log2', None],\n",
         "          'random_state': [73]\n",
         "               }\n",
         "\n",
@@ -577,6 +590,29 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import confusion_matrix, accuracy_score, balanced_accuracy_score, roc_auc_score, f1_score\n",
+        "\n",
+        "y_pred = randomizedSearchRF.predict(X_test)\n",
+        "\n",
+        "accuracy = accuracy_score(y_test, y_pred)\n",
+        "balanced_accuracy = balanced_accuracy_score(y_test, y_pred)\n",
+        "roc_auc = roc_auc_score(y_test, y_pred, multi_class='ovr')\n",
+        "f1 = f1_score(y_test, y_pred, average='weighted')\n",
+        "\n",
+        "print(\"Accuracy:\", accuracy)\n",
+        "print(\"Balanced Accuracy:\", balanced_accuracy)\n",
+        "print(\"ROC AUC:\", roc_auc)\n",
+        "print(\"F1 Score:\", f1)\n"
+      ],
+      "metadata": {
+        "id": "vkqoN-sbwQDK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "YNHR67mWZCFZ"
@@ -589,9 +625,9 @@
         "model = LGBMClassifier()\n",
         "\n",
         "params = {\n",
-        "    'max_depth': [5, 10, 15],\n",
-        "    'learning_rate': [0.01, 0.05, 0.1],\n",
-        "    'n_estimators': [50, 100, 150],\n",
+        "    'max_depth': [5, 10],\n",
+        "    'learning_rate': [0.01, 0.05],\n",
+        "    'n_estimators': [50, 100],\n",
         "    'random_state': [73]\n",
         "}\n",
         "\n",
@@ -607,6 +643,29 @@
         "# 0.6842125988442014\n",
         "# 0.6727664155005382"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import confusion_matrix, accuracy_score, balanced_accuracy_score, roc_auc_score, f1_score\n",
+        "\n",
+        "y_pred = randomizedSearchLGBM.predict(X_test)\n",
+        "\n",
+        "accuracy = accuracy_score(y_test, y_pred)\n",
+        "balanced_accuracy = balanced_accuracy_score(y_test, y_pred)\n",
+        "roc_auc = roc_auc_score(y_test, y_pred, multi_class='ovr')\n",
+        "f1 = f1_score(y_test, y_pred, average='weighted')\n",
+        "\n",
+        "print(\"Accuracy:\", accuracy)\n",
+        "print(\"Balanced Accuracy:\", balanced_accuracy)\n",
+        "print(\"ROC AUC:\", roc_auc)\n",
+        "print(\"F1 Score:\", f1)"
+      ],
+      "metadata": {
+        "id": "fYdPBeSPwQ5_"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
