--- a/notebooks/Candidate_Model_Genesis.ipynb
+++ b/notebooks/Candidate_Model_Genesis.ipynb
@@ -1306,12 +1306,8 @@
         "grid_searchAda.fit(X_train, y_train)\n",
         "\n",
         "print(grid_searchAda.best_params_)\n",
-        "print(grid_searchAda.best_score_)\n",
-        "print(grid_searchAda.score(X_test, y_test))\n",
         "\n",
-        "# {'algorithm': 'SAMME.R', 'learning_rate': 0.1, 'n_estimators': 150, 'random_state': 73}\n",
-        "# 0.6837443194516875\n",
-        "# 0.673842841765339"
+        "# {'algorithm': 'SAMME.R', 'learning_rate': 0.1, 'n_estimators': 150, 'random_state': 73}"
       ]
     },
     {
@@ -1396,12 +1392,8 @@
         "grid_searchRF.fit(X_train, y_train)\n",
         "\n",
         "print(grid_searchRF.best_params_)\n",
-        "print(grid_searchRF.best_score_)\n",
-        "print(grid_searchRF.score(X_test, y_test))\n",
         "\n",
-        "# {'max_depth': 10, 'max_features': 'sqrt', 'n_estimators': 100, 'random_state': 73}\n",
-        "# 0.6911463266674472\n",
-        "# 0.6598493003229279"
+        "# {'max_depth': 10, 'max_features': 'sqrt', 'n_estimators': 100, 'random_state': 73}"
       ]
     },
     {
@@ -1486,12 +1478,8 @@
         "grid_searchLGBM.fit(X_train, y_train)\n",
         "\n",
         "print(grid_searchLGBM.best_params_)\n",
-        "print(grid_searchLGBM.best_score_)\n",
-        "print(grid_searchLGBM.score(X_test, y_test))\n",
         "\n",
-        "# {'learning_rate': 0.05, 'max_depth': 10, 'n_estimators': 50, 'random_state': 73}\n",
-        "# 0.6842125988442014\n",
-        "# 0.6727664155005382"
+        "# {'learning_rate': 0.05, 'max_depth': 10, 'n_estimators': 50, 'random_state': 73}"
       ]
     },
     {
@@ -1586,12 +1574,7 @@
         "randomizedSearchAda.fit(X_train, y_train)\n",
         "\n",
         "print(randomizedSearchAda.best_params_)\n",
-        "print(randomizedSearchAda.best_score_)\n",
-        "print(randomizedSearchAda.score(X_test, y_test))\n",
-        "\n",
-        "# {'random_state': 73, 'n_estimators': 150, 'learning_rate': 0.1, 'algorithm': 'SAMME.R'}\n",
-        "# 0.6837443194516875\n",
-        "# 0.673842841765339"
+        "# {'random_state': 73, 'n_estimators': 150, 'learning_rate': 0.1, 'algorithm': 'SAMME.R'}"
       ]
     },
     {
@@ -1678,12 +1661,8 @@
         "randomizedSearchRF.fit(X_train, y_train)\n",
         "\n",
         "print(randomizedSearchRF.best_params_)\n",
-        "print(randomizedSearchRF.best_score_)\n",
-        "print(randomizedSearchRF.score(X_test, y_test))\n",
         "\n",
-        "# {'random_state': 73, 'n_estimators': 150, 'max_features': 'sqrt', 'max_depth': 10}\n",
-        "# 0.6809787626962143\n",
-        "# 0.6641550053821313"
+        "# {'random_state': 73, 'n_estimators': 150, 'max_features': 'sqrt', 'max_depth': 10}"
       ]
     },
     {
@@ -1768,12 +1747,7 @@
         "randomizedSearchLGBM.fit(X_train, y_train)\n",
         "\n",
         "print(randomizedSearchLGBM.best_params_)\n",
-        "print(randomizedSearchLGBM.best_score_)\n",
-        "print(randomizedSearchLGBM.score(X_test, y_test))\n",
-        "\n",
-        "# {'random_state': 73, 'n_estimators': 50, 'max_depth': 10, 'learning_rate': 0.05}\n",
-        "# 0.6842125988442014\n",
-        "# 0.6727664155005382"
+        "print(randomizedSearchLGBM.best_score_)"
       ]
     },
     {
@@ -1818,6 +1792,25 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Conclusão"
+      ],
+      "metadata": {
+        "id": "tZW0lWF201kM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Logo apartir destas métricas o melhor modelo é o AdaBoostClassifier com estes parametros: \n",
+        "{'algorithm': 'SAMME.R', 'learning_rate': 0.1, 'n_estimators': 150, 'random_state': 73}\n"
+      ],
+      "metadata": {
+        "id": "Gzc7sdM_07Bs"
+      }
     }
   ],
   "metadata": {
